--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
-
     "flatpickr": "^4.5.0",
-
     "gmaps": "^0.4.24",
-
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "typed.js": "^2.0.7"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
